<resources>
    <string name="app_name">Pervasive_projcect</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="username">UserName</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="birthdate">Birthdate</string>
    <string name="on">ON</string>
    <string name="default_web_client_id">client</string>

</resources>